--- a/flower.html
+++ b/flower.html
@@ -57,6 +57,7 @@
       background: radial-gradient(circle, #fff, #e8e8e8);
       border-radius: 50%;
       box-shadow: 0 0 50px #fff;
+      z-index: 10;
     }
 
     .torii {
