--- a/index.html
+++ b/index.html
@@ -30,13 +30,32 @@
       z-index: 15;
     }
 
+    @keyframes fly {
+      0% {
+        transform: translate(0, 0) rotate(0deg);
+      }
+      25% {
+        transform: translate(60px, -80px) rotate(5deg);
+      }
+      50% {
+        transform: translate(-80px, 50px) rotate(-5deg);
+      }
+      75% {
+        transform: translate(50px, -40px) rotate(8deg);
+      }
+      100% {
+        transform: translate(0, 0) rotate(0deg);
+      }
+    }
+
     .petal {
       position: absolute;
       width: 15px;
       height: 15px;
       background: pink;
       border-radius: 50%;
-      animation: fall 10s linear infinite;
+      animation: fall 8s linear infinite;
+      opacity: 0.7;
     }
 
     @keyframes fall {
@@ -48,6 +67,24 @@
       }
     }
 
+    .lantern {
+      position: absolute;
+      width: 50px;
+      height: 100px;
+      background: #f7d26e;
+      border-radius: 5px;
+      box-shadow: 0 0 20px #f7d26e;
+      animation: flicker 3s infinite;
+    }
+
+    @keyframes flicker {
+      0%, 100% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 0.6;
+      }
+    }
 
     .moon {
       position: absolute;
@@ -73,26 +110,6 @@
       background-repeat: no-repeat;
       z-index: 10;
     }
-    
-
-    .lantern {
-      position: absolute;
-      width: 50px;
-      height: 100px;
-      background: #f7d26e;
-      border-radius: 5px;
-      box-shadow: 0 0 20px #f7d26e;
-      animation: flicker 2s infinite;
-    }
-
-    @keyframes flicker {
-      0%, 100% {
-        opacity: 1;
-      }
-      50% {
-        opacity: 0.7;
-      }
-    }
 
     .kanji {
       position: absolute;
@@ -108,18 +125,23 @@
 <body>
   <div class="garden" id="garden">
     <div class="moon"></div>
-    <div class="torii"></div>
+    <div class="torii" id="torii"></div>
     <div class="kanji">禅</div>
   </div>
 
   <script>
     const garden = document.getElementById('garden');
+    const torii = document.getElementById('torii');
 
-    function createSakura(x, y) {
+    function createSakura() {
       const sakura = document.createElement('div');
       sakura.className = 'sakura';
-      sakura.style.left = `${x}px`;
-      sakura.style.top = `${y}px`;
+      const toriiRect = torii.getBoundingClientRect();
+      const startX = toriiRect.left + Math.random() * toriiRect.width;
+      const startY = toriiRect.top + toriiRect.height - Math.random() * 300; // Start lower
+      sakura.style.left = `${startX}px`;
+      sakura.style.top = `${startY}px`;
+      sakura.style.animation = `fly ${10 + Math.random() * 5}s ease-in-out infinite`; // Slower and smoother
       return sakura;
     }
 
@@ -128,8 +150,8 @@
       petal.className = 'petal';
       petal.style.left = `${Math.random() * window.innerWidth}px`;
       petal.style.animationDuration = `${5 + Math.random() * 5}s`;
-      petal.style.opacity = Math.random();
-      return petal;
+      garden.appendChild(petal);
+      setTimeout(() => petal.remove(), 9000);
     }
 
     function createLantern() {
@@ -137,47 +159,31 @@
       lantern.className = 'lantern';
       lantern.style.left = `${Math.random() * window.innerWidth}px`;
       lantern.style.top = `${60 + Math.random() * (window.innerHeight - 200)}px`;
-      return lantern;
-    }
-
-    function addSakuraRow() {
-      const centerX = window.innerWidth / 2;
-      const spacing = 200; // Spacing between Sakura trees
-      const totalTrees = 5; // Adjust the number of trees
-
-      for (let i = 0; i < totalTrees; i++) {
-        const x = centerX + (i - Math.floor(totalTrees / 2)) * spacing;
-        const y = window.innerHeight / 2 + Math.random() * 1000 - 100; // Randomized vertical position
-        const sakura = createSakura(x, y);
-        garden.appendChild(sakura);
-      }
-    }
-
-    function addFallingPetals() {
-      const petal = createFallingPetal();
-      garden.appendChild(petal);
-      setTimeout(() => petal.remove(), 10000); // Remove petal after animation
-    }
-
-    function addLanterns() {
-      const lantern = createLantern();
       garden.appendChild(lantern);
     }
 
-    // Initial setup
-    addSakuraRow();
+    function addSakura() {
+      const sakura = createSakura();
+      garden.appendChild(sakura);
+      setTimeout(() => {
+        sakura.remove();
+      }, 20000);
+    }
 
-    // Periodically add falling petals
+    // Periodically add sakura trees
     setInterval(() => {
-      addFallingPetals();
+      addSakura();
+    }, 4000);
+
+    // Periodically add petals
+    setInterval(() => {
+      createFallingPetal();
     }, 300);
 
-    // Randomly place lanterns in the garden
-    for (let i = 0; i < 8; i++) {
-      addLanterns();
+    // Place lanterns randomly
+    for (let i = 0; i < 5; i++) {
+      createLantern();
     }
   </script>
 </body>
 </html>
-
-
